# python-CCSDS

./: CHANGELOG  CHANGELOG.md  README.md  ccsds.py  pyproject.toml  requirements.txt
CCSDSpy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/PyCCSDS/: __init__.py  __main__.py  dic2table.py
