[tool.poetry]
name = "Python-CCSDS"
version = "0.1.0"
keywords =['python','ccsds','nasa','esa','packets']
descriprion = 'Python library to read the CCSDS packets'
authors = ["Romolo Politi <romolo.politi@inaf.it>"]
license = "GNU GPL ver3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
rich = "^13.9.2"
bitstring = "^4.2.3"
spiceypy = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
